--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
     <h1 title="this is a tooltip" onclick="console.log('I have been summoned')">DOM er ajke special events</h1>
     <button onclick="console.log(7)">Click Me</button>
     <button onclick="console.log(65)">Another Button</button>
+    <br>
+    <button onclick="document.body.style.backgroundColor='lightgrey'">Make Yellow</button>
+    <!-- Option 2 -->
+    <button onclick="makeGreen()">Make Green</button>
+    <!-- Option 3 -->
+    <button id="make-blue">Make Blue</button>
+    <button id="make-purple">Make Purple</button>
     <script src="js/events.js"></script>
+    <script>
+        
+    </script>
 </body>
 </html>
