--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <!-- Option 3 -->
     <button id="make-blue">Make Blue</button>
     <button id="make-purple">Make Purple</button>
+    <!-- Option 4 -->
+     <button id="make-pink">Make Pink</button>
+     <button id="make-reddish">Make Reddish</button>
+     <button id="make-golden">Make Goldenrod</button>
     <script src="js/events.js"></script>
     <script>
         
